// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderXml > marks n/a composites with equivalent="none" 1`] = `
"<lift_manifest schema_version="1" project="demo" frame="computer-frame" shape="ad-hoc">
  <generated_by>Arcade Studio</generated_by>
  <frame_path>/abs/computer-frame.tsx</frame_path>
  <intent>Computer app chrome.</intent>
  <default_mapping_convention>
    <rule>For any arcade primitive with no explicit mapping entry, the default assumption is that the same symbol is exported from '@devrev-web/design-system/shared/raw-design-system'. Verify by grep; if absent, surface to the reviewer.</rule>
    <lookup>From a devrev-web checkout: grep -rE "^export .*\\b&lt;Name&gt;\\b" libs/design-system/shared/raw-design-system/src/components. If the export exists, use it. If not, it may live in a sibling package (settings, pages, agent, side-panel) — widen the grep, or surface to the reviewer. Prop names usually match; treat non-trivial prop differences as the reviewer's decision.</lookup>
    <anchors>
      <anchor>Switch → raw-design-system Switch (direct match; confirm with grep)</anchor>
      <anchor>TextArea → raw-design-system TextArea (direct match; confirm with grep)</anchor>
    </anchors>
  </default_mapping_convention>
  <frame_inventory>
    <mapping class="judgment" studio_source="arcade-prototypes" studio_name="ChatInput" equivalent="none">
      <judgment_note>Studio provides a chat-input composite. In devrev-web chat inputs live inside specific features (Support, Timeline) and are bespoke. Map against the host feature's input component.</judgment_note>
    </mapping>
    <mapping class="judgment" studio_source="arcade-prototypes" studio_name="ComputerHeader" equivalent="none">
      <judgment_note>ComputerHeader is Studio-specific UI (the 'Computer' app's own title bar). No production equivalent — drop when the frame is being lifted as a product feature, keep if lifting the whole Computer experience.</judgment_note>
    </mapping>
    <mapping class="judgment" studio_source="arcade-prototypes" studio_name="ComputerSidebar" equivalent="none">
      <judgment_note>Studio-specific UI (chat sidebar for the Computer app). Treat like ComputerHeader.</judgment_note>
    </mapping>
    <mapping class="mechanical" studio_source="arcade" studio_name="Button" production_source="@devrev-web-internal/design-system-shared-raw-design-system/components/button" production_name="Button">
      <prop_delta from="size" value_map="sm-&gt;S, md-&gt;M, lg-&gt;L"/>
      <prop_delta from="variant"/>
      <slot_note>Children are identical. Leading/trailing icons move from raw children to \`start\` / \`end\` slots in production.</slot_note>
    </mapping>
  </frame_inventory>
  <scaffolding shape="ad-hoc">
    <description>These are the things a Studio frame never covers by itself. Engineer and agent divide between them.</description>
    <item status="required">Consider whether this fits an existing Tier-2/3 template (PageLayout, ListViewPage, SettingsPage)</item>
    <item status="required" path="libs/&lt;domain&gt;/shared/data-layer/src/use-&lt;entity&gt;.ts">Data-layer hook (useDL&lt;Entity&gt; query)</item>
    <item status="required" path="libs/&lt;domain&gt;/adapters/src/&lt;entity&gt;.ts">Adapter (API response → UI shape)</item>
    <item status="required" path="libs/&lt;domain&gt;/shared/data-layer/src/keys.ts">Query keys entry</item>
    <item status="required" path="STALE_TIMES_IN_MS.&lt;ENTITY&gt;">Stale time entry</item>
    <item status="required" path="apps/product/dr-router.tsx + libs/micro-apps/main/src/...">Route registration</item>
    <item status="required">Feature flag gate (useFeatureFlag)</item>
    <item status="required">Event tracker wiring (useEventTracker + track)</item>
  </scaffolding>
  <grounding>
    <figma_url>https://figma.com/file/xyz</figma_url>
    <screenshot_url>/api/projects/demo/thumbnails/computer-frame.png</screenshot_url>
  </grounding>
  <render_harness>
    <target_path>tmp/lift/computer-frame.tsx</target_path>
    <iframe_url keep_running="true">http://localhost:4400/iframe.html?id=lift-validation-computerframe--default&amp;viewMode=story</iframe_url>
    <story_scaffold>SCOPE: the render-validation story below is an EXPECTED, IN-SCOPE
verification artifact of this lift — NOT a codebase modification. A
kickoff rule like "only write the lift file" or "don't change anything
else" does NOT forbid it: rendering IS the lift's verification step, and
these files are its scaffolding. Do not skip the render and flag it as a
gap. If a real constraint makes even scratch files impossible, say so
explicitly and name what blocked it.

THE DELIVERABLE IS A LIVE, CLICKABLE STORYBOOK — not a screenshot, not a
static check. When you finish, the reviewer opens the iframe URL in their
own browser and clicks around. So: KEEP the story file and LEAVE STORYBOOK
RUNNING. Do NOT tear down the server or delete the story at the end.

DO NOT stop at static grep — a class string existing in the file does
NOT prove it paints (see baseline check below). To get the live render:

1. Co-locate the lifted component AND a paired story in a directory the
   Storybook glob already scans and the DS ThemeProvider already wraps:
     libs/agent-platform/feature/agent-studio/src/stories/__lift_validation/
   Write the component as computerframe.tsx (default export
   \`ComputerFrame\`) and computerframe.stories.tsx beside it.

2. Story file (mirror the existing skills-gallery.stories.tsx in that dir):
     import { Decorator, Meta } from '@storybook/nextjs';
     import { MemoryRouter, Route, Routes } from 'react-router-dom';
     import ComputerFrame from './computerframe';
     const withRouter: Decorator = (Story) =&gt; (
       &lt;MemoryRouter initialEntries={['/']}&gt;
         &lt;Routes&gt;&lt;Route path="/*" element={&lt;Story /&gt;} /&gt;&lt;/Routes&gt;
       &lt;/MemoryRouter&gt;
     );
     export default {
       decorators: [withRouter], tags: ['lift-validation'],
       title: 'Lift Validation/ComputerFrame',
       parameters: { layout: 'fullscreen' },
     } as Meta;
     export const Default = () =&gt; &lt;ComputerFrame /&gt;;

3. Launch Storybook (from the devrev-web root): \`pnpm run start:storybook\`.
   It binds on http://localhost:4400 (NOT 6006). The first cold build
   takes a few minutes; poll the port before navigating.

   GOTCHA: Storybook bundles ALL stories into one preview — a single
   pre-existing story with a stale import will fail the whole build and
   the port never binds. If start fails, read the log for \`ERROR in\`;
   if the broken file is NOT yours, temporarily move it aside, render,
   then restore it.

4. Navigate to: http://localhost:4400/iframe.html?id=lift-validation-computerframe--default&amp;viewMode=story
   Run the checks below against the live computed styles.

5. LEAVE IT RUNNING. Do NOT stop Storybook and do NOT delete the story —
   the reviewer needs to open the URL themselves. The two things that must
   survive: the lift file \`tmp/lift/computer-frame.tsx\` and the running Storybook with
   its story. The ONLY cleanup you do: if you moved a pre-existing broken
   story aside in step 3 to get the build green, restore it (but if
   restoring it re-breaks the running build, leave it parked and say so —
   a working server the reviewer can click beats a tidy story dir).

6. In your summary, give the reviewer the clickable URL on its own line:
   http://localhost:4400/iframe.html?id=lift-validation-computerframe--default&amp;viewMode=story
   plus the Storybook port (4400) and a one-line how-to-stop-it note.

If Storybook is genuinely unavailable, you still owe a live render via
some isolated entry — do not substitute grep and call the lift verified.</story_scaffold>
    <backdrop_note>Wrap the rendered story in a decorator that gives it a non-white backdrop — many DS border tokens resolve to near-white (e.g. \`#FAFAFA\`) and will vanish against a pure-white iframe. A simple \`&lt;div className="min-h-screen bg-[hsl(var(--bg-surface-shallow))]"&gt;\` wrapper is enough when the target codebase's tokens are raw HSL channels; if the token is already a full color, omit the \`hsl()\` wrap.</backdrop_note>
    <checks>
      <check>GREP DOES NOT PROVE PAINT. Confirming a class string exists in the file (or is 'used somewhere' by grep) does NOT verify it resolves to a color in THIS render context — many tokens are app-scoped or theme-gated and fall through to transparent/currentColor. Every visual claim below must come from a LIVE computed style read (getComputedStyle), never from grep.</check>
      <check>No browser console errors or unresolved React errors on first mount.</check>
      <check>For each card/container, computed \`borderColor\` is a real color (not transparent, not \`rgb(0,0,0)\`/near-black). Near-black borders on a light-theme render almost always mean a token fell through to Tailwind's \`currentColor\` default.</check>
      <check>For each element that Studio gave a \`background\`, computed \`backgroundColor\` is NOT \`rgba(0, 0, 0, 0)\` (transparent) unless the Studio source was also transparent. A transparent background usually means a theme variable was embedded inline as a raw HSL triple and silently invalidated, OR the utility's backing token is app-scoped and undefined in this shell (see app_scoped_token_convention).</check>
      <check>Active/selected states (e.g. tab underline, button hover) render visibly. If the active tab has the same color as an inactive tab, a state token didn't resolve.</check>
    </checks>
  </render_harness>
  <agent_directives>
    You are lifting an Arcade Studio frame into devrev-web. Read the CONVENTIONS first — they tell you HOW to translate classes of Studio construct (icons, chrome, unmapped components, inline style tokens). Then walk the frame inventory: apply MECHANICAL rewrites directly; for CLOSE-BUT-NOT-IDENTITY entries treat the propDeltas and slotNotes as load-bearing — the surface looks identity-1:1 but a bare rename will not compile or will render wrong, so follow the per-delta note verbatim (wrap the callback, reach for the arbitrary-value class, etc.); write the production shape for STRUCTURAL ones with a brief comment on what changed; and leave // TODO comments with the judgment_note verbatim for JUDGMENT entries. When a mapping includes &lt;prior_art&gt;, OPEN the first example file before writing code — it's a real consumer and will resolve most shape questions faster than slot_notes can. When a mapping lists &lt;dropped_props&gt;, those Studio props have no production equivalent — don't guess a replacement; drop them with the reason as a TODO comment. For each icon under &lt;icons&gt;, resolve via the icon_convention (grep ICON_TYPES). For each &lt;unmapped/&gt; entry, apply the default_mapping_convention — verify the assumed target exists by grep before using it. If &lt;style_attribute_convention&gt; fired, every inline style={{ ... var(--...) ... }} in the frame source must be rewritten per that convention's anchors — leaving them intact will produce black borders or transparent backgrounds at render time. If &lt;render_harness&gt; is present, after writing the lift you MUST produce a LIVE render and read computed styles — static grep that a class "resolves" is NOT acceptable verification (a class string can exist and still paint nothing). Follow &lt;story_scaffold&gt; verbatim: it gives the exact globbed+themed directory, the paired story file, the launch command, and the predicted iframe URL — there is no "bare tmp/lift file has no story" excuse. The scratch story the scaffold has you create is an IN-SCOPE verification artifact, not a codebase change — a kickoff rule like "only write the lift file" does NOT forbid it, and you create then delete it as part of verifying. Navigate the iframe URL and verify every check against live getComputedStyle output before declaring the lift done.
  </agent_directives>
</lift_manifest>
"
`;

exports[`renderXml > renders a detail frame 1`] = `
"<lift_manifest schema_version="1" project="demo" frame="detail-frame" shape="detail">
  <generated_by>Arcade Studio</generated_by>
  <frame_path>/abs/detail-frame.tsx</frame_path>
  <intent>Ticket detail with tabs.</intent>
  <chrome_convention>
    <rule>App-shell chrome (NavSidebar, TitleBar, AppShell, top-bar Search/Bell/Avatar clusters) belongs to the ROUTER LAYOUT in devrev-web, not to the page. Drop it at the page boundary during the lift.</rule>
    <lookup>Production features mount their Nav at the feature router, not inside the page component. Before discarding Studio's sidebar data, confirm the host router already provides a Nav by reading e.g. libs/settings/feature/computer-settings/src/computer-settings-router.tsx.</lookup>
    <anchors>
      <anchor>Studio \`&lt;SettingsPage sidebar={&lt;NavSidebar/&gt;}&gt;\` → keep the &lt;SettingsPage&gt; children, drop the sidebar prop; the host router's Nav renders the sidebar.</anchor>
      <anchor>Studio's top-bar \`actions\` cluster (Search + Bell + Avatar) → drop entirely; that chrome lives in the shell, not the page.</anchor>
      <anchor>Studio's \`pageActions\` (Create / Delete / Add) → keep; these go in &lt;SettingsPage.Header.Actions&gt;.</anchor>
    </anchors>
  </chrome_convention>
  <default_mapping_convention>
    <rule>For any arcade primitive with no explicit mapping entry, the default assumption is that the same symbol is exported from '@devrev-web/design-system/shared/raw-design-system'. Verify by grep; if absent, surface to the reviewer.</rule>
    <lookup>From a devrev-web checkout: grep -rE "^export .*\\b&lt;Name&gt;\\b" libs/design-system/shared/raw-design-system/src/components. If the export exists, use it. If not, it may live in a sibling package (settings, pages, agent, side-panel) — widen the grep, or surface to the reviewer. Prop names usually match; treat non-trivial prop differences as the reviewer's decision.</lookup>
    <anchors>
      <anchor>Switch → raw-design-system Switch (direct match; confirm with grep)</anchor>
      <anchor>TextArea → raw-design-system TextArea (direct match; confirm with grep)</anchor>
    </anchors>
  </default_mapping_convention>
  <frame_inventory>
    <mapping class="structural" studio_source="arcade-prototypes" studio_name="AppShell" production_source="@devrev-web-internal/design-system-shared-raw-design-system/components/page" production_name="Page">
      <slot_note>AppShell wraps the whole app in a sidebar+content flex layout. PREFER a higher-level page template when one fits the frame's shape: a settings-style frame (TitleBar + NavSidebar + BreadcrumbBar + centered body with grouped rows) lifts to \`SettingsPage\` from '@devrev-web/design-system/shared/settings' (≈86 call sites) — that template owns the chrome, so you do NOT unroll the flex layout. Read libs/.../*-settings page prior art (e.g. preferences-page.tsx) for the SettingsPage.Header / Toolbar shape.</slot_note>
      <slot_note>Only when NO template fits (a bespoke layout) do you unroll inline: \`&lt;div className="flex h-screen"&gt;&lt;aside&gt;{sidebar}&lt;/aside&gt;&lt;div className="flex-1"&gt;{children}&lt;/div&gt;&lt;/div&gt;\` alongside &lt;Page&gt;. Inline-flex-+-Page is the fallback, not the default.</slot_note>
    </mapping>
    <mapping class="mechanical" studio_source="arcade-prototypes" studio_name="BreadcrumbBar" production_source="@devrev-web-internal/design-system-shared-raw-design-system/components/breadcrumbs" production_name="Breadcrumbs"/>
    <mapping class="structural" studio_source="arcade-prototypes" studio_name="PageBody" production_source="@devrev-web-internal/design-system-shared-raw-design-system/components/page" production_name="Page">
      <slot_note>Compose as \`&lt;Page.Content&gt;\` inside \`&lt;Page&gt;\`. Page.Content is a subcomponent attachment on the \`Page\` export.</slot_note>
    </mapping>
    <mapping class="structural" studio_source="arcade-prototypes" studio_name="TitleBar" production_source="@devrev-web-internal/design-system-shared-raw-design-system/components/page" production_name="Page">
      <slot_note>Compose with \`&lt;Page.Header&gt;\` under \`&lt;Page&gt;\`. Production \`Page.Header\` is a subcomponent attachment, not a standalone export.</slot_note>
      <slot_note>Traffic-lights/window-chrome elements from Studio's TitleBar do not exist in production (they are Studio's own chrome); drop them.</slot_note>
    </mapping>
    <mapping class="mechanical" studio_source="arcade" studio_name="Button" production_source="@devrev-web-internal/design-system-shared-raw-design-system/components/button" production_name="Button">
      <prop_delta from="size" value_map="sm-&gt;S, md-&gt;M, lg-&gt;L"/>
      <prop_delta from="variant"/>
      <slot_note>Children are identical. Leading/trailing icons move from raw children to \`start\` / \`end\` slots in production.</slot_note>
    </mapping>
    <mapping class="close-but-not-identity" studio_source="arcade" studio_name="Tabs" production_source="@devrev-web-internal/design-system-shared-raw-design-system/components/tabs" production_name="Tabs">
      <prop_delta from="value"/>
      <prop_delta from="onChange" to="onValueChange">Production onValueChange signature is \`(value?: string) =&gt; void\` — the arg is optional. A bare useState&lt;string&gt; setter will NOT typecheck. Wrap: \`onValueChange={(v) =&gt; setState(v ?? "")}\` (or narrow with a type guard).</prop_delta>
      <slot_note>Studio Tabs.Root / Tabs.Trigger → production Tabs / Tabs.Item. Tabs.List is identical.</slot_note>
      <slot_note>Controlled usage: \`value\` is required; \`onValueChange\` receives \`string | undefined\`, not \`string\`. Bare setState won't typecheck — always wrap.</slot_note>
    </mapping>
  </frame_inventory>
  <scaffolding shape="detail">
    <description>These are the things a Studio frame never covers by itself. Engineer and agent divide between them.</description>
    <item status="required" path="libs/&lt;domain&gt;/shared/data-layer/src/use-&lt;entity&gt;.ts">Data-layer hook (useDL&lt;Entity&gt; query)</item>
    <item status="required" path="libs/&lt;domain&gt;/adapters/src/&lt;entity&gt;.ts">Adapter (API response → UI shape)</item>
    <item status="required" path="libs/&lt;domain&gt;/shared/data-layer/src/keys.ts">Query keys entry</item>
    <item status="required" path="STALE_TIMES_IN_MS.&lt;ENTITY&gt;">Stale time entry</item>
    <item status="required" path="apps/product/dr-router.tsx + libs/micro-apps/main/src/...">Route registration</item>
    <item status="required">Feature flag gate (useFeatureFlag)</item>
    <item status="required">Event tracker wiring (useEventTracker + track)</item>
  </scaffolding>
  <grounding>
    <figma_url>https://figma.com/file/xyz</figma_url>
    <screenshot_url>/api/projects/demo/thumbnails/detail-frame.png</screenshot_url>
  </grounding>
  <render_harness>
    <target_path>tmp/lift/detail-frame.tsx</target_path>
    <iframe_url keep_running="true">http://localhost:4400/iframe.html?id=lift-validation-detailframe--default&amp;viewMode=story</iframe_url>
    <story_scaffold>SCOPE: the render-validation story below is an EXPECTED, IN-SCOPE
verification artifact of this lift — NOT a codebase modification. A
kickoff rule like "only write the lift file" or "don't change anything
else" does NOT forbid it: rendering IS the lift's verification step, and
these files are its scaffolding. Do not skip the render and flag it as a
gap. If a real constraint makes even scratch files impossible, say so
explicitly and name what blocked it.

THE DELIVERABLE IS A LIVE, CLICKABLE STORYBOOK — not a screenshot, not a
static check. When you finish, the reviewer opens the iframe URL in their
own browser and clicks around. So: KEEP the story file and LEAVE STORYBOOK
RUNNING. Do NOT tear down the server or delete the story at the end.

DO NOT stop at static grep — a class string existing in the file does
NOT prove it paints (see baseline check below). To get the live render:

1. Co-locate the lifted component AND a paired story in a directory the
   Storybook glob already scans and the DS ThemeProvider already wraps:
     libs/agent-platform/feature/agent-studio/src/stories/__lift_validation/
   Write the component as detailframe.tsx (default export
   \`DetailFrame\`) and detailframe.stories.tsx beside it.

2. Story file (mirror the existing skills-gallery.stories.tsx in that dir):
     import { Decorator, Meta } from '@storybook/nextjs';
     import { MemoryRouter, Route, Routes } from 'react-router-dom';
     import DetailFrame from './detailframe';
     const withRouter: Decorator = (Story) =&gt; (
       &lt;MemoryRouter initialEntries={['/']}&gt;
         &lt;Routes&gt;&lt;Route path="/*" element={&lt;Story /&gt;} /&gt;&lt;/Routes&gt;
       &lt;/MemoryRouter&gt;
     );
     export default {
       decorators: [withRouter], tags: ['lift-validation'],
       title: 'Lift Validation/DetailFrame',
       parameters: { layout: 'fullscreen' },
     } as Meta;
     export const Default = () =&gt; &lt;DetailFrame /&gt;;

3. Launch Storybook (from the devrev-web root): \`pnpm run start:storybook\`.
   It binds on http://localhost:4400 (NOT 6006). The first cold build
   takes a few minutes; poll the port before navigating.

   GOTCHA: Storybook bundles ALL stories into one preview — a single
   pre-existing story with a stale import will fail the whole build and
   the port never binds. If start fails, read the log for \`ERROR in\`;
   if the broken file is NOT yours, temporarily move it aside, render,
   then restore it.

4. Navigate to: http://localhost:4400/iframe.html?id=lift-validation-detailframe--default&amp;viewMode=story
   Run the checks below against the live computed styles.

5. LEAVE IT RUNNING. Do NOT stop Storybook and do NOT delete the story —
   the reviewer needs to open the URL themselves. The two things that must
   survive: the lift file \`tmp/lift/detail-frame.tsx\` and the running Storybook with
   its story. The ONLY cleanup you do: if you moved a pre-existing broken
   story aside in step 3 to get the build green, restore it (but if
   restoring it re-breaks the running build, leave it parked and say so —
   a working server the reviewer can click beats a tidy story dir).

6. In your summary, give the reviewer the clickable URL on its own line:
   http://localhost:4400/iframe.html?id=lift-validation-detailframe--default&amp;viewMode=story
   plus the Storybook port (4400) and a one-line how-to-stop-it note.

If Storybook is genuinely unavailable, you still owe a live render via
some isolated entry — do not substitute grep and call the lift verified.</story_scaffold>
    <backdrop_note>Wrap the rendered story in a decorator that gives it a non-white backdrop — many DS border tokens resolve to near-white (e.g. \`#FAFAFA\`) and will vanish against a pure-white iframe. A simple \`&lt;div className="min-h-screen bg-[hsl(var(--bg-surface-shallow))]"&gt;\` wrapper is enough when the target codebase's tokens are raw HSL channels; if the token is already a full color, omit the \`hsl()\` wrap.</backdrop_note>
    <checks>
      <check>GREP DOES NOT PROVE PAINT. Confirming a class string exists in the file (or is 'used somewhere' by grep) does NOT verify it resolves to a color in THIS render context — many tokens are app-scoped or theme-gated and fall through to transparent/currentColor. Every visual claim below must come from a LIVE computed style read (getComputedStyle), never from grep.</check>
      <check>No browser console errors or unresolved React errors on first mount.</check>
      <check>For each card/container, computed \`borderColor\` is a real color (not transparent, not \`rgb(0,0,0)\`/near-black). Near-black borders on a light-theme render almost always mean a token fell through to Tailwind's \`currentColor\` default.</check>
      <check>For each element that Studio gave a \`background\`, computed \`backgroundColor\` is NOT \`rgba(0, 0, 0, 0)\` (transparent) unless the Studio source was also transparent. A transparent background usually means a theme variable was embedded inline as a raw HSL triple and silently invalidated, OR the utility's backing token is app-scoped and undefined in this shell (see app_scoped_token_convention).</check>
      <check>Active/selected states (e.g. tab underline, button hover) render visibly. If the active tab has the same color as an inactive tab, a state token didn't resolve.</check>
      <check>For each close-but-not-identity mapping (Tabs), confirm the propDeltas' "wrap" / "narrow" guidance was applied verbatim at every call site. A bare setState or identity handler will typecheck-fail or render wrong.</check>
    </checks>
  </render_harness>
  <agent_directives>
    You are lifting an Arcade Studio frame into devrev-web. Read the CONVENTIONS first — they tell you HOW to translate classes of Studio construct (icons, chrome, unmapped components, inline style tokens). Then walk the frame inventory: apply MECHANICAL rewrites directly; for CLOSE-BUT-NOT-IDENTITY entries treat the propDeltas and slotNotes as load-bearing — the surface looks identity-1:1 but a bare rename will not compile or will render wrong, so follow the per-delta note verbatim (wrap the callback, reach for the arbitrary-value class, etc.); write the production shape for STRUCTURAL ones with a brief comment on what changed; and leave // TODO comments with the judgment_note verbatim for JUDGMENT entries. When a mapping includes &lt;prior_art&gt;, OPEN the first example file before writing code — it's a real consumer and will resolve most shape questions faster than slot_notes can. When a mapping lists &lt;dropped_props&gt;, those Studio props have no production equivalent — don't guess a replacement; drop them with the reason as a TODO comment. For each icon under &lt;icons&gt;, resolve via the icon_convention (grep ICON_TYPES). For each &lt;unmapped/&gt; entry, apply the default_mapping_convention — verify the assumed target exists by grep before using it. If &lt;style_attribute_convention&gt; fired, every inline style={{ ... var(--...) ... }} in the frame source must be rewritten per that convention's anchors — leaving them intact will produce black borders or transparent backgrounds at render time. If &lt;render_harness&gt; is present, after writing the lift you MUST produce a LIVE render and read computed styles — static grep that a class "resolves" is NOT acceptable verification (a class string can exist and still paint nothing). Follow &lt;story_scaffold&gt; verbatim: it gives the exact globbed+themed directory, the paired story file, the launch command, and the predicted iframe URL — there is no "bare tmp/lift file has no story" excuse. The scratch story the scaffold has you create is an IN-SCOPE verification artifact, not a codebase change — a kickoff rule like "only write the lift file" does NOT forbid it, and you create then delete it as part of verifying. Navigate the iframe URL and verify every check against live getComputedStyle output before declaring the lift done.
  </agent_directives>
</lift_manifest>
"
`;

exports[`renderXml > renders a list-view frame 1`] = `
"<lift_manifest schema_version="1" project="demo" frame="list-frame" shape="list-view">
  <generated_by>Arcade Studio</generated_by>
  <frame_path>/abs/list-frame.tsx</frame_path>
  <intent>List of tickets with filters and pagination.</intent>
  <default_mapping_convention>
    <rule>For any arcade primitive with no explicit mapping entry, the default assumption is that the same symbol is exported from '@devrev-web/design-system/shared/raw-design-system'. Verify by grep; if absent, surface to the reviewer.</rule>
    <lookup>From a devrev-web checkout: grep -rE "^export .*\\b&lt;Name&gt;\\b" libs/design-system/shared/raw-design-system/src/components. If the export exists, use it. If not, it may live in a sibling package (settings, pages, agent, side-panel) — widen the grep, or surface to the reviewer. Prop names usually match; treat non-trivial prop differences as the reviewer's decision.</lookup>
    <anchors>
      <anchor>Switch → raw-design-system Switch (direct match; confirm with grep)</anchor>
      <anchor>TextArea → raw-design-system TextArea (direct match; confirm with grep)</anchor>
    </anchors>
  </default_mapping_convention>
  <frame_inventory>
    <mapping class="structural" studio_source="arcade-prototypes" studio_name="VistaFilterPill" production_source="@devrev-web-internal/design-system-shared-raw-design-system/components/chip" production_name="Chip">
      <slot_note>Production uses Chip with a close-button slot; Studio's VistaFilterPill bundles behaviour into one component.</slot_note>
    </mapping>
    <mapping class="structural" studio_source="arcade-prototypes" studio_name="VistaPage" production_source="@devrev-web/shared/part-work-components" production_name="ListViewPage">
      <slot_note>VistaPage composes AppShell + VistaHeader + VistaToolbar + content. Production wraps these behaviours in ListViewPage: pass tableProps, filterProps, headerProps.</slot_note>
      <slot_note>The \`primaryAction\`, \`count\`, \`toolbarIcons\`, \`filters\` slots from VistaPage map onto headerProps.actions, headerProps.count, toolbarProps.actions, toolbarProps.filters respectively.</slot_note>
      <prior_art>
        <example path="libs/commerce/features/skus/src/pages/skus-page.tsx" covers="ListViewPage with tableProps, filters, headerProps"/>
      </prior_art>
    </mapping>
    <mapping class="judgment" studio_source="arcade-prototypes" studio_name="VistaPagination" equivalent="none">
      <judgment_note>2026-05-12 drift audit: no \`Pagination\` export exists in raw-design-system. ListViewPage owns pagination itself; if the frame uses VistaPagination standalone, ask the reviewer whether to use the ListViewPage-owned behavior or inline a bespoke control.</judgment_note>
    </mapping>
    <mapping class="mechanical" studio_source="arcade" studio_name="Button" production_source="@devrev-web-internal/design-system-shared-raw-design-system/components/button" production_name="Button">
      <prop_delta from="size" value_map="sm-&gt;S, md-&gt;M, lg-&gt;L"/>
      <prop_delta from="variant"/>
      <slot_note>Children are identical. Leading/trailing icons move from raw children to \`start\` / \`end\` slots in production.</slot_note>
    </mapping>
    <mapping class="structural" studio_source="arcade" studio_name="Input" production_source="@devrev-web-internal/design-system-shared-raw-design-system/components/text-input" production_name="TextInput">
      <prop_delta from="value"/>
      <prop_delta from="onChange"/>
      <prop_delta from="placeholder"/>
      <prop_delta from="disabled" to="modifiers">Production moves disabled/readOnly into a \`modifiers\` prop object: modifiers={{ disabled: true }}.</prop_delta>
      <slot_note>Studio exposes \`start\` / \`end\` as children-like nodes. Production uses explicit \`start\` / \`end\` slot props.</slot_note>
    </mapping>
  </frame_inventory>
  <scaffolding shape="list-view">
    <description>These are the things a Studio frame never covers by itself. Engineer and agent divide between them.</description>
    <item status="required" path="libs/&lt;domain&gt;/shared/data-layer/src/use-&lt;entity&gt;s.ts">Data-layer hook (useDL&lt;Entity&gt;s list query)</item>
    <item status="required" path="libs/&lt;domain&gt;/adapters/src/&lt;entity&gt;-list.ts">Adapter (API list response → UI shape)</item>
    <item status="required" path="libs/&lt;domain&gt;/shared/data-layer/src/keys.ts">Query keys entry</item>
    <item status="required" path="STALE_TIMES_IN_MS.&lt;ENTITY&gt;">Stale time entry</item>
    <item status="required" path="apps/product/dr-router.tsx + libs/micro-apps/main/src/...">Route registration</item>
    <item status="required">Feature flag gate (useFeatureFlag)</item>
    <item status="required">Event tracker wiring (useEventTracker + track)</item>
  </scaffolding>
  <grounding>
    <figma_url>https://figma.com/file/xyz</figma_url>
    <screenshot_url>/api/projects/demo/thumbnails/list-frame.png</screenshot_url>
  </grounding>
  <render_harness>
    <target_path>tmp/lift/list-frame.tsx</target_path>
    <iframe_url keep_running="true">http://localhost:4400/iframe.html?id=lift-validation-listframe--default&amp;viewMode=story</iframe_url>
    <story_scaffold>SCOPE: the render-validation story below is an EXPECTED, IN-SCOPE
verification artifact of this lift — NOT a codebase modification. A
kickoff rule like "only write the lift file" or "don't change anything
else" does NOT forbid it: rendering IS the lift's verification step, and
these files are its scaffolding. Do not skip the render and flag it as a
gap. If a real constraint makes even scratch files impossible, say so
explicitly and name what blocked it.

THE DELIVERABLE IS A LIVE, CLICKABLE STORYBOOK — not a screenshot, not a
static check. When you finish, the reviewer opens the iframe URL in their
own browser and clicks around. So: KEEP the story file and LEAVE STORYBOOK
RUNNING. Do NOT tear down the server or delete the story at the end.

DO NOT stop at static grep — a class string existing in the file does
NOT prove it paints (see baseline check below). To get the live render:

1. Co-locate the lifted component AND a paired story in a directory the
   Storybook glob already scans and the DS ThemeProvider already wraps:
     libs/agent-platform/feature/agent-studio/src/stories/__lift_validation/
   Write the component as listframe.tsx (default export
   \`ListFrame\`) and listframe.stories.tsx beside it.

2. Story file (mirror the existing skills-gallery.stories.tsx in that dir):
     import { Decorator, Meta } from '@storybook/nextjs';
     import { MemoryRouter, Route, Routes } from 'react-router-dom';
     import ListFrame from './listframe';
     const withRouter: Decorator = (Story) =&gt; (
       &lt;MemoryRouter initialEntries={['/']}&gt;
         &lt;Routes&gt;&lt;Route path="/*" element={&lt;Story /&gt;} /&gt;&lt;/Routes&gt;
       &lt;/MemoryRouter&gt;
     );
     export default {
       decorators: [withRouter], tags: ['lift-validation'],
       title: 'Lift Validation/ListFrame',
       parameters: { layout: 'fullscreen' },
     } as Meta;
     export const Default = () =&gt; &lt;ListFrame /&gt;;

3. Launch Storybook (from the devrev-web root): \`pnpm run start:storybook\`.
   It binds on http://localhost:4400 (NOT 6006). The first cold build
   takes a few minutes; poll the port before navigating.

   GOTCHA: Storybook bundles ALL stories into one preview — a single
   pre-existing story with a stale import will fail the whole build and
   the port never binds. If start fails, read the log for \`ERROR in\`;
   if the broken file is NOT yours, temporarily move it aside, render,
   then restore it.

4. Navigate to: http://localhost:4400/iframe.html?id=lift-validation-listframe--default&amp;viewMode=story
   Run the checks below against the live computed styles.

5. LEAVE IT RUNNING. Do NOT stop Storybook and do NOT delete the story —
   the reviewer needs to open the URL themselves. The two things that must
   survive: the lift file \`tmp/lift/list-frame.tsx\` and the running Storybook with
   its story. The ONLY cleanup you do: if you moved a pre-existing broken
   story aside in step 3 to get the build green, restore it (but if
   restoring it re-breaks the running build, leave it parked and say so —
   a working server the reviewer can click beats a tidy story dir).

6. In your summary, give the reviewer the clickable URL on its own line:
   http://localhost:4400/iframe.html?id=lift-validation-listframe--default&amp;viewMode=story
   plus the Storybook port (4400) and a one-line how-to-stop-it note.

If Storybook is genuinely unavailable, you still owe a live render via
some isolated entry — do not substitute grep and call the lift verified.</story_scaffold>
    <backdrop_note>Wrap the rendered story in a decorator that gives it a non-white backdrop — many DS border tokens resolve to near-white (e.g. \`#FAFAFA\`) and will vanish against a pure-white iframe. A simple \`&lt;div className="min-h-screen bg-[hsl(var(--bg-surface-shallow))]"&gt;\` wrapper is enough when the target codebase's tokens are raw HSL channels; if the token is already a full color, omit the \`hsl()\` wrap.</backdrop_note>
    <checks>
      <check>GREP DOES NOT PROVE PAINT. Confirming a class string exists in the file (or is 'used somewhere' by grep) does NOT verify it resolves to a color in THIS render context — many tokens are app-scoped or theme-gated and fall through to transparent/currentColor. Every visual claim below must come from a LIVE computed style read (getComputedStyle), never from grep.</check>
      <check>No browser console errors or unresolved React errors on first mount.</check>
      <check>For each card/container, computed \`borderColor\` is a real color (not transparent, not \`rgb(0,0,0)\`/near-black). Near-black borders on a light-theme render almost always mean a token fell through to Tailwind's \`currentColor\` default.</check>
      <check>For each element that Studio gave a \`background\`, computed \`backgroundColor\` is NOT \`rgba(0, 0, 0, 0)\` (transparent) unless the Studio source was also transparent. A transparent background usually means a theme variable was embedded inline as a raw HSL triple and silently invalidated, OR the utility's backing token is app-scoped and undefined in this shell (see app_scoped_token_convention).</check>
      <check>Active/selected states (e.g. tab underline, button hover) render visibly. If the active tab has the same color as an inactive tab, a state token didn't resolve.</check>
    </checks>
  </render_harness>
  <agent_directives>
    You are lifting an Arcade Studio frame into devrev-web. Read the CONVENTIONS first — they tell you HOW to translate classes of Studio construct (icons, chrome, unmapped components, inline style tokens). Then walk the frame inventory: apply MECHANICAL rewrites directly; for CLOSE-BUT-NOT-IDENTITY entries treat the propDeltas and slotNotes as load-bearing — the surface looks identity-1:1 but a bare rename will not compile or will render wrong, so follow the per-delta note verbatim (wrap the callback, reach for the arbitrary-value class, etc.); write the production shape for STRUCTURAL ones with a brief comment on what changed; and leave // TODO comments with the judgment_note verbatim for JUDGMENT entries. When a mapping includes &lt;prior_art&gt;, OPEN the first example file before writing code — it's a real consumer and will resolve most shape questions faster than slot_notes can. When a mapping lists &lt;dropped_props&gt;, those Studio props have no production equivalent — don't guess a replacement; drop them with the reason as a TODO comment. For each icon under &lt;icons&gt;, resolve via the icon_convention (grep ICON_TYPES). For each &lt;unmapped/&gt; entry, apply the default_mapping_convention — verify the assumed target exists by grep before using it. If &lt;style_attribute_convention&gt; fired, every inline style={{ ... var(--...) ... }} in the frame source must be rewritten per that convention's anchors — leaving them intact will produce black borders or transparent backgrounds at render time. If &lt;render_harness&gt; is present, after writing the lift you MUST produce a LIVE render and read computed styles — static grep that a class "resolves" is NOT acceptable verification (a class string can exist and still paint nothing). Follow &lt;story_scaffold&gt; verbatim: it gives the exact globbed+themed directory, the paired story file, the launch command, and the predicted iframe URL — there is no "bare tmp/lift file has no story" excuse. The scratch story the scaffold has you create is an IN-SCOPE verification artifact, not a codebase change — a kickoff rule like "only write the lift file" does NOT forbid it, and you create then delete it as part of verifying. Navigate the iframe URL and verify every check against live getComputedStyle output before declaring the lift done.
  </agent_directives>
</lift_manifest>
"
`;

exports[`renderXml > renders a settings-form frame 1`] = `
"<lift_manifest schema_version="1" project="demo" frame="settings-frame" shape="settings-form">
  <generated_by>Arcade Studio</generated_by>
  <frame_path>/abs/settings-frame.tsx</frame_path>
  <intent>Profile settings form.</intent>
  <default_mapping_convention>
    <rule>For any arcade primitive with no explicit mapping entry, the default assumption is that the same symbol is exported from '@devrev-web/design-system/shared/raw-design-system'. Verify by grep; if absent, surface to the reviewer.</rule>
    <lookup>From a devrev-web checkout: grep -rE "^export .*\\b&lt;Name&gt;\\b" libs/design-system/shared/raw-design-system/src/components. If the export exists, use it. If not, it may live in a sibling package (settings, pages, agent, side-panel) — widen the grep, or surface to the reviewer. Prop names usually match; treat non-trivial prop differences as the reviewer's decision.</lookup>
    <anchors>
      <anchor>Switch → raw-design-system Switch (direct match; confirm with grep)</anchor>
      <anchor>TextArea → raw-design-system TextArea (direct match; confirm with grep)</anchor>
    </anchors>
  </default_mapping_convention>
  <frame_inventory>
    <mapping class="mechanical" studio_source="arcade-prototypes" studio_name="SettingsCard" production_source="@devrev-web/design-system/shared/settings" production_name="SettingsSection">
      <slot_note>Card heading + body → SettingsSection with \`title\` + children.</slot_note>
    </mapping>
    <mapping class="structural" studio_source="arcade-prototypes" studio_name="SettingsPage" production_source="@devrev-web/design-system/shared/settings" production_name="SettingsPage">
      <slot_note>Studio's SettingsPage takes \`sidebar\`, \`breadcrumb\`, \`actions\`, \`pageActions\` as PROPS. Production takes children only.</slot_note>
      <slot_note>Production shape:
  &lt;SettingsPage&gt;
    &lt;SettingsPage.Header&gt;
      &lt;SettingsPage.Header.Title breadcrumbs={&lt;Breadcrumbs&gt;...}&gt;{title}&lt;/SettingsPage.Header.Title&gt;
      &lt;SettingsPage.Header.Description&gt;{subtitle}&lt;/SettingsPage.Header.Description&gt;
      &lt;SettingsPage.Header.Actions&gt;{actions}&lt;/SettingsPage.Header.Actions&gt;
    &lt;/SettingsPage.Header&gt;
    &lt;SettingsPage.Content&gt;{children}&lt;/SettingsPage.Content&gt;
  &lt;/SettingsPage&gt;</slot_note>
      <slot_note>Studio's \`sidebar\` slot has no destination on the production page — in devrev-web the Nav is mounted at the router layout level, not the page (see e.g. libs/settings/feature/computer-settings/src/computer-settings-router.tsx). Drop the sidebar at the page boundary.</slot_note>
      <slot_note>Studio's \`actions\` slot (top-bar Search/Bell/Avatar chrome) belongs to the app shell in production, not the settings page. Drop unless the reviewer explicitly wants a bespoke page header.</slot_note>
      <slot_note>Studio's \`pageActions\` slot maps to \`&lt;SettingsPage.Header.Actions&gt;\`.</slot_note>
      <prior_art>
        <example path="libs/settings/feature/computer-settings/src/pages/preferences/preferences-page.tsx" covers="SettingsPage + Header.Title + Breadcrumbs + Content"/>
        <example path="libs/agent-platform/feature/customize-computer/src/pages/computer-skills-settings.tsx" covers="SettingsPage + Header.Actions + Tabs inside Content"/>
        <example path="libs/settings/feature/computer-settings/src/computer-settings-router.tsx" covers="where the router mounts Nav — the sidebar SettingsPage does NOT own"/>
      </prior_art>
    </mapping>
    <mapping class="judgment" studio_source="arcade-prototypes" studio_name="SettingsRow" equivalent="none">
      <judgment_note>No SettingsRow component in production. Compose rows inline inside \`&lt;SettingsSection&gt;\` using label + input markup. See libs/settings/feature/computer-settings/src/pages/preferences/preferences-page.tsx for the house style.</judgment_note>
    </mapping>
    <mapping class="mechanical" studio_source="arcade" studio_name="Button" production_source="@devrev-web-internal/design-system-shared-raw-design-system/components/button" production_name="Button">
      <prop_delta from="size" value_map="sm-&gt;S, md-&gt;M, lg-&gt;L"/>
      <prop_delta from="variant"/>
      <slot_note>Children are identical. Leading/trailing icons move from raw children to \`start\` / \`end\` slots in production.</slot_note>
    </mapping>
    <mapping class="structural" studio_source="arcade" studio_name="Input" production_source="@devrev-web-internal/design-system-shared-raw-design-system/components/text-input" production_name="TextInput">
      <prop_delta from="value"/>
      <prop_delta from="onChange"/>
      <prop_delta from="placeholder"/>
      <prop_delta from="disabled" to="modifiers">Production moves disabled/readOnly into a \`modifiers\` prop object: modifiers={{ disabled: true }}.</prop_delta>
      <slot_note>Studio exposes \`start\` / \`end\` as children-like nodes. Production uses explicit \`start\` / \`end\` slot props.</slot_note>
    </mapping>
  </frame_inventory>
  <scaffolding shape="settings-form">
    <description>These are the things a Studio frame never covers by itself. Engineer and agent divide between them.</description>
    <item status="required" path="libs/&lt;domain&gt;/shared/data-layer/src/use-&lt;entity&gt;.ts">Data-layer hook (useDL&lt;Entity&gt; query)</item>
    <item status="required" path="libs/&lt;domain&gt;/shared/data-layer/src/use-update-&lt;entity&gt;.ts">Data-layer hook (useDL&lt;Entity&gt; mutation)</item>
    <item status="required" path="libs/&lt;domain&gt;/adapters/src/&lt;entity&gt;.ts">Adapter (API response → UI shape)</item>
    <item status="required" path="libs/&lt;domain&gt;/shared/data-layer/src/keys.ts">Query keys entry</item>
    <item status="required" path="STALE_TIMES_IN_MS.&lt;ENTITY&gt;">Stale time entry</item>
    <item status="required" path="libs/&lt;domain&gt;/feature/&lt;feature&gt;/src/hooks/use-&lt;feature&gt;-form.ts">Form hook (validation + submission)</item>
    <item status="required" path="apps/product/dr-router.tsx + libs/micro-apps/main/src/...">Route registration</item>
    <item status="required">Feature flag gate (useFeatureFlag)</item>
    <item status="required">Event tracker wiring (useEventTracker + track)</item>
  </scaffolding>
  <grounding>
    <figma_url>https://figma.com/file/xyz</figma_url>
    <screenshot_url>/api/projects/demo/thumbnails/settings-frame.png</screenshot_url>
  </grounding>
  <render_harness>
    <target_path>tmp/lift/settings-frame.tsx</target_path>
    <iframe_url keep_running="true">http://localhost:4400/iframe.html?id=lift-validation-settingsframe--default&amp;viewMode=story</iframe_url>
    <story_scaffold>SCOPE: the render-validation story below is an EXPECTED, IN-SCOPE
verification artifact of this lift — NOT a codebase modification. A
kickoff rule like "only write the lift file" or "don't change anything
else" does NOT forbid it: rendering IS the lift's verification step, and
these files are its scaffolding. Do not skip the render and flag it as a
gap. If a real constraint makes even scratch files impossible, say so
explicitly and name what blocked it.

THE DELIVERABLE IS A LIVE, CLICKABLE STORYBOOK — not a screenshot, not a
static check. When you finish, the reviewer opens the iframe URL in their
own browser and clicks around. So: KEEP the story file and LEAVE STORYBOOK
RUNNING. Do NOT tear down the server or delete the story at the end.

DO NOT stop at static grep — a class string existing in the file does
NOT prove it paints (see baseline check below). To get the live render:

1. Co-locate the lifted component AND a paired story in a directory the
   Storybook glob already scans and the DS ThemeProvider already wraps:
     libs/agent-platform/feature/agent-studio/src/stories/__lift_validation/
   Write the component as settingsframe.tsx (default export
   \`SettingsFrame\`) and settingsframe.stories.tsx beside it.

2. Story file (mirror the existing skills-gallery.stories.tsx in that dir):
     import { Decorator, Meta } from '@storybook/nextjs';
     import { MemoryRouter, Route, Routes } from 'react-router-dom';
     import SettingsFrame from './settingsframe';
     const withRouter: Decorator = (Story) =&gt; (
       &lt;MemoryRouter initialEntries={['/']}&gt;
         &lt;Routes&gt;&lt;Route path="/*" element={&lt;Story /&gt;} /&gt;&lt;/Routes&gt;
       &lt;/MemoryRouter&gt;
     );
     export default {
       decorators: [withRouter], tags: ['lift-validation'],
       title: 'Lift Validation/SettingsFrame',
       parameters: { layout: 'fullscreen' },
     } as Meta;
     export const Default = () =&gt; &lt;SettingsFrame /&gt;;

3. Launch Storybook (from the devrev-web root): \`pnpm run start:storybook\`.
   It binds on http://localhost:4400 (NOT 6006). The first cold build
   takes a few minutes; poll the port before navigating.

   GOTCHA: Storybook bundles ALL stories into one preview — a single
   pre-existing story with a stale import will fail the whole build and
   the port never binds. If start fails, read the log for \`ERROR in\`;
   if the broken file is NOT yours, temporarily move it aside, render,
   then restore it.

4. Navigate to: http://localhost:4400/iframe.html?id=lift-validation-settingsframe--default&amp;viewMode=story
   Run the checks below against the live computed styles.

5. LEAVE IT RUNNING. Do NOT stop Storybook and do NOT delete the story —
   the reviewer needs to open the URL themselves. The two things that must
   survive: the lift file \`tmp/lift/settings-frame.tsx\` and the running Storybook with
   its story. The ONLY cleanup you do: if you moved a pre-existing broken
   story aside in step 3 to get the build green, restore it (but if
   restoring it re-breaks the running build, leave it parked and say so —
   a working server the reviewer can click beats a tidy story dir).

6. In your summary, give the reviewer the clickable URL on its own line:
   http://localhost:4400/iframe.html?id=lift-validation-settingsframe--default&amp;viewMode=story
   plus the Storybook port (4400) and a one-line how-to-stop-it note.

If Storybook is genuinely unavailable, you still owe a live render via
some isolated entry — do not substitute grep and call the lift verified.</story_scaffold>
    <backdrop_note>Wrap the rendered story in a decorator that gives it a non-white backdrop — many DS border tokens resolve to near-white (e.g. \`#FAFAFA\`) and will vanish against a pure-white iframe. A simple \`&lt;div className="min-h-screen bg-[hsl(var(--bg-surface-shallow))]"&gt;\` wrapper is enough when the target codebase's tokens are raw HSL channels; if the token is already a full color, omit the \`hsl()\` wrap.</backdrop_note>
    <checks>
      <check>GREP DOES NOT PROVE PAINT. Confirming a class string exists in the file (or is 'used somewhere' by grep) does NOT verify it resolves to a color in THIS render context — many tokens are app-scoped or theme-gated and fall through to transparent/currentColor. Every visual claim below must come from a LIVE computed style read (getComputedStyle), never from grep.</check>
      <check>No browser console errors or unresolved React errors on first mount.</check>
      <check>For each card/container, computed \`borderColor\` is a real color (not transparent, not \`rgb(0,0,0)\`/near-black). Near-black borders on a light-theme render almost always mean a token fell through to Tailwind's \`currentColor\` default.</check>
      <check>For each element that Studio gave a \`background\`, computed \`backgroundColor\` is NOT \`rgba(0, 0, 0, 0)\` (transparent) unless the Studio source was also transparent. A transparent background usually means a theme variable was embedded inline as a raw HSL triple and silently invalidated, OR the utility's backing token is app-scoped and undefined in this shell (see app_scoped_token_convention).</check>
      <check>Active/selected states (e.g. tab underline, button hover) render visibly. If the active tab has the same color as an inactive tab, a state token didn't resolve.</check>
    </checks>
  </render_harness>
  <agent_directives>
    You are lifting an Arcade Studio frame into devrev-web. Read the CONVENTIONS first — they tell you HOW to translate classes of Studio construct (icons, chrome, unmapped components, inline style tokens). Then walk the frame inventory: apply MECHANICAL rewrites directly; for CLOSE-BUT-NOT-IDENTITY entries treat the propDeltas and slotNotes as load-bearing — the surface looks identity-1:1 but a bare rename will not compile or will render wrong, so follow the per-delta note verbatim (wrap the callback, reach for the arbitrary-value class, etc.); write the production shape for STRUCTURAL ones with a brief comment on what changed; and leave // TODO comments with the judgment_note verbatim for JUDGMENT entries. When a mapping includes &lt;prior_art&gt;, OPEN the first example file before writing code — it's a real consumer and will resolve most shape questions faster than slot_notes can. When a mapping lists &lt;dropped_props&gt;, those Studio props have no production equivalent — don't guess a replacement; drop them with the reason as a TODO comment. For each icon under &lt;icons&gt;, resolve via the icon_convention (grep ICON_TYPES). For each &lt;unmapped/&gt; entry, apply the default_mapping_convention — verify the assumed target exists by grep before using it. If &lt;style_attribute_convention&gt; fired, every inline style={{ ... var(--...) ... }} in the frame source must be rewritten per that convention's anchors — leaving them intact will produce black borders or transparent backgrounds at render time. If &lt;render_harness&gt; is present, after writing the lift you MUST produce a LIVE render and read computed styles — static grep that a class "resolves" is NOT acceptable verification (a class string can exist and still paint nothing). Follow &lt;story_scaffold&gt; verbatim: it gives the exact globbed+themed directory, the paired story file, the launch command, and the predicted iframe URL — there is no "bare tmp/lift file has no story" excuse. The scratch story the scaffold has you create is an IN-SCOPE verification artifact, not a codebase change — a kickoff rule like "only write the lift file" does NOT forbid it, and you create then delete it as part of verifying. Navigate the iframe URL and verify every check against live getComputedStyle output before declaring the lift done.
  </agent_directives>
</lift_manifest>
"
`;

exports[`renderXml > renders an ad-hoc frame 1`] = `
"<lift_manifest schema_version="1" project="demo" frame="adhoc-frame" shape="ad-hoc">
  <generated_by>Arcade Studio</generated_by>
  <frame_path>/abs/adhoc-frame.tsx</frame_path>
  <intent>Confirmation modal.</intent>
  <default_mapping_convention>
    <rule>For any arcade primitive with no explicit mapping entry, the default assumption is that the same symbol is exported from '@devrev-web/design-system/shared/raw-design-system'. Verify by grep; if absent, surface to the reviewer.</rule>
    <lookup>From a devrev-web checkout: grep -rE "^export .*\\b&lt;Name&gt;\\b" libs/design-system/shared/raw-design-system/src/components. If the export exists, use it. If not, it may live in a sibling package (settings, pages, agent, side-panel) — widen the grep, or surface to the reviewer. Prop names usually match; treat non-trivial prop differences as the reviewer's decision.</lookup>
    <anchors>
      <anchor>Switch → raw-design-system Switch (direct match; confirm with grep)</anchor>
      <anchor>TextArea → raw-design-system TextArea (direct match; confirm with grep)</anchor>
    </anchors>
  </default_mapping_convention>
  <frame_inventory>
    <mapping class="mechanical" studio_source="arcade" studio_name="Button" production_source="@devrev-web-internal/design-system-shared-raw-design-system/components/button" production_name="Button">
      <prop_delta from="size" value_map="sm-&gt;S, md-&gt;M, lg-&gt;L"/>
      <prop_delta from="variant"/>
      <slot_note>Children are identical. Leading/trailing icons move from raw children to \`start\` / \`end\` slots in production.</slot_note>
    </mapping>
    <mapping class="structural" studio_source="arcade" studio_name="Modal" production_source="@devrev-web-internal/design-system-shared-raw-design-system/components/modal" production_name="Modal">
      <prop_delta from="open"/>
      <prop_delta from="onOpenChange"/>
      <slot_note>Studio's &lt;Modal.Root open onOpenChange&gt;…&lt;/Modal.Root&gt; collapses to production's top-level &lt;Modal open onOpenChange&gt;…&lt;/Modal&gt; — there is NO production Modal.Root. Move the open/onOpenChange props onto &lt;Modal&gt; itself and DROP the .Root wrapper.</slot_note>
      <slot_note>Inside, the subcomponents map 1:1: Modal.Content → Modal.Content, Modal.Header → Modal.Header (with Modal.Header.Title / .Actions / .Description), Modal.Body → Modal.Body, Modal.Footer → Modal.Footer. Modal.Close and Modal.Trigger also exist.</slot_note>
      <slot_note>Prior art (read before writing): libs/commerce/features/your-plan/src/components/switch-plan-confirm-dialog.tsx — &lt;Modal open onOpenChange size="480"&gt;&lt;Modal.Content&gt;&lt;Modal.Header&gt;&lt;Modal.Header.Title/&gt;&lt;/Modal.Header&gt;&lt;Modal.Body/&gt;&lt;Modal.Footer/&gt;&lt;/Modal.Content&gt;&lt;/Modal&gt;.</slot_note>
      <slot_note>Accessibility: production Modal.Content warns at runtime if there's no Modal.Header.Title (radix DialogTitle requirement). If the Studio source had no header title, add a Modal.Header.Title (visually-hidden if needed) rather than leaving the a11y advisory.</slot_note>
      <prior_art>
        <example path="libs/commerce/features/your-plan/src/components/switch-plan-confirm-dialog.tsx" covers="Modal (root) + Content + Header.Title + Body + Footer, no Modal.Root"/>
      </prior_art>
    </mapping>
  </frame_inventory>
  <scaffolding shape="ad-hoc">
    <description>These are the things a Studio frame never covers by itself. Engineer and agent divide between them.</description>
    <item status="required">Consider whether this fits an existing Tier-2/3 template (PageLayout, ListViewPage, SettingsPage)</item>
    <item status="required" path="libs/&lt;domain&gt;/shared/data-layer/src/use-&lt;entity&gt;.ts">Data-layer hook (useDL&lt;Entity&gt; query)</item>
    <item status="required" path="libs/&lt;domain&gt;/adapters/src/&lt;entity&gt;.ts">Adapter (API response → UI shape)</item>
    <item status="required" path="libs/&lt;domain&gt;/shared/data-layer/src/keys.ts">Query keys entry</item>
    <item status="required" path="STALE_TIMES_IN_MS.&lt;ENTITY&gt;">Stale time entry</item>
    <item status="required" path="apps/product/dr-router.tsx + libs/micro-apps/main/src/...">Route registration</item>
    <item status="required">Feature flag gate (useFeatureFlag)</item>
    <item status="required">Event tracker wiring (useEventTracker + track)</item>
  </scaffolding>
  <grounding>
    <figma_url>https://figma.com/file/xyz</figma_url>
    <screenshot_url>/api/projects/demo/thumbnails/adhoc-frame.png</screenshot_url>
  </grounding>
  <render_harness>
    <target_path>tmp/lift/adhoc-frame.tsx</target_path>
    <iframe_url keep_running="true">http://localhost:4400/iframe.html?id=lift-validation-adhocframe--default&amp;viewMode=story</iframe_url>
    <story_scaffold>SCOPE: the render-validation story below is an EXPECTED, IN-SCOPE
verification artifact of this lift — NOT a codebase modification. A
kickoff rule like "only write the lift file" or "don't change anything
else" does NOT forbid it: rendering IS the lift's verification step, and
these files are its scaffolding. Do not skip the render and flag it as a
gap. If a real constraint makes even scratch files impossible, say so
explicitly and name what blocked it.

THE DELIVERABLE IS A LIVE, CLICKABLE STORYBOOK — not a screenshot, not a
static check. When you finish, the reviewer opens the iframe URL in their
own browser and clicks around. So: KEEP the story file and LEAVE STORYBOOK
RUNNING. Do NOT tear down the server or delete the story at the end.

DO NOT stop at static grep — a class string existing in the file does
NOT prove it paints (see baseline check below). To get the live render:

1. Co-locate the lifted component AND a paired story in a directory the
   Storybook glob already scans and the DS ThemeProvider already wraps:
     libs/agent-platform/feature/agent-studio/src/stories/__lift_validation/
   Write the component as adhocframe.tsx (default export
   \`AdhocFrame\`) and adhocframe.stories.tsx beside it.

2. Story file (mirror the existing skills-gallery.stories.tsx in that dir):
     import { Decorator, Meta } from '@storybook/nextjs';
     import { MemoryRouter, Route, Routes } from 'react-router-dom';
     import AdhocFrame from './adhocframe';
     const withRouter: Decorator = (Story) =&gt; (
       &lt;MemoryRouter initialEntries={['/']}&gt;
         &lt;Routes&gt;&lt;Route path="/*" element={&lt;Story /&gt;} /&gt;&lt;/Routes&gt;
       &lt;/MemoryRouter&gt;
     );
     export default {
       decorators: [withRouter], tags: ['lift-validation'],
       title: 'Lift Validation/AdhocFrame',
       parameters: { layout: 'fullscreen' },
     } as Meta;
     export const Default = () =&gt; &lt;AdhocFrame /&gt;;

3. Launch Storybook (from the devrev-web root): \`pnpm run start:storybook\`.
   It binds on http://localhost:4400 (NOT 6006). The first cold build
   takes a few minutes; poll the port before navigating.

   GOTCHA: Storybook bundles ALL stories into one preview — a single
   pre-existing story with a stale import will fail the whole build and
   the port never binds. If start fails, read the log for \`ERROR in\`;
   if the broken file is NOT yours, temporarily move it aside, render,
   then restore it.

4. Navigate to: http://localhost:4400/iframe.html?id=lift-validation-adhocframe--default&amp;viewMode=story
   Run the checks below against the live computed styles.

5. LEAVE IT RUNNING. Do NOT stop Storybook and do NOT delete the story —
   the reviewer needs to open the URL themselves. The two things that must
   survive: the lift file \`tmp/lift/adhoc-frame.tsx\` and the running Storybook with
   its story. The ONLY cleanup you do: if you moved a pre-existing broken
   story aside in step 3 to get the build green, restore it (but if
   restoring it re-breaks the running build, leave it parked and say so —
   a working server the reviewer can click beats a tidy story dir).

6. In your summary, give the reviewer the clickable URL on its own line:
   http://localhost:4400/iframe.html?id=lift-validation-adhocframe--default&amp;viewMode=story
   plus the Storybook port (4400) and a one-line how-to-stop-it note.

If Storybook is genuinely unavailable, you still owe a live render via
some isolated entry — do not substitute grep and call the lift verified.</story_scaffold>
    <backdrop_note>Wrap the rendered story in a decorator that gives it a non-white backdrop — many DS border tokens resolve to near-white (e.g. \`#FAFAFA\`) and will vanish against a pure-white iframe. A simple \`&lt;div className="min-h-screen bg-[hsl(var(--bg-surface-shallow))]"&gt;\` wrapper is enough when the target codebase's tokens are raw HSL channels; if the token is already a full color, omit the \`hsl()\` wrap.</backdrop_note>
    <checks>
      <check>GREP DOES NOT PROVE PAINT. Confirming a class string exists in the file (or is 'used somewhere' by grep) does NOT verify it resolves to a color in THIS render context — many tokens are app-scoped or theme-gated and fall through to transparent/currentColor. Every visual claim below must come from a LIVE computed style read (getComputedStyle), never from grep.</check>
      <check>No browser console errors or unresolved React errors on first mount.</check>
      <check>For each card/container, computed \`borderColor\` is a real color (not transparent, not \`rgb(0,0,0)\`/near-black). Near-black borders on a light-theme render almost always mean a token fell through to Tailwind's \`currentColor\` default.</check>
      <check>For each element that Studio gave a \`background\`, computed \`backgroundColor\` is NOT \`rgba(0, 0, 0, 0)\` (transparent) unless the Studio source was also transparent. A transparent background usually means a theme variable was embedded inline as a raw HSL triple and silently invalidated, OR the utility's backing token is app-scoped and undefined in this shell (see app_scoped_token_convention).</check>
      <check>Active/selected states (e.g. tab underline, button hover) render visibly. If the active tab has the same color as an inactive tab, a state token didn't resolve.</check>
    </checks>
  </render_harness>
  <agent_directives>
    You are lifting an Arcade Studio frame into devrev-web. Read the CONVENTIONS first — they tell you HOW to translate classes of Studio construct (icons, chrome, unmapped components, inline style tokens). Then walk the frame inventory: apply MECHANICAL rewrites directly; for CLOSE-BUT-NOT-IDENTITY entries treat the propDeltas and slotNotes as load-bearing — the surface looks identity-1:1 but a bare rename will not compile or will render wrong, so follow the per-delta note verbatim (wrap the callback, reach for the arbitrary-value class, etc.); write the production shape for STRUCTURAL ones with a brief comment on what changed; and leave // TODO comments with the judgment_note verbatim for JUDGMENT entries. When a mapping includes &lt;prior_art&gt;, OPEN the first example file before writing code — it's a real consumer and will resolve most shape questions faster than slot_notes can. When a mapping lists &lt;dropped_props&gt;, those Studio props have no production equivalent — don't guess a replacement; drop them with the reason as a TODO comment. For each icon under &lt;icons&gt;, resolve via the icon_convention (grep ICON_TYPES). For each &lt;unmapped/&gt; entry, apply the default_mapping_convention — verify the assumed target exists by grep before using it. If &lt;style_attribute_convention&gt; fired, every inline style={{ ... var(--...) ... }} in the frame source must be rewritten per that convention's anchors — leaving them intact will produce black borders or transparent backgrounds at render time. If &lt;render_harness&gt; is present, after writing the lift you MUST produce a LIVE render and read computed styles — static grep that a class "resolves" is NOT acceptable verification (a class string can exist and still paint nothing). Follow &lt;story_scaffold&gt; verbatim: it gives the exact globbed+themed directory, the paired story file, the launch command, and the predicted iframe URL — there is no "bare tmp/lift file has no story" excuse. The scratch story the scaffold has you create is an IN-SCOPE verification artifact, not a codebase change — a kickoff rule like "only write the lift file" does NOT forbid it, and you create then delete it as part of verifying. Navigate the iframe URL and verify every check against live getComputedStyle output before declaring the lift done.
  </agent_directives>
</lift_manifest>
"
`;
